Fix connection / region z-index edge case

--- a/src/styles/mixins/editor/_editor.scss
+++ b/src/styles/mixins/editor/_editor.scss
@@ -119,7 +119,7 @@ $grid-area: $grid-size * 10000;
 
   .grid {
     display: table;
-    z-index: -5;
+    z-index: -100;
     position: absolute;
     top: -$grid-area;
     left: -$grid-area;
